Update DepressiLess models and user information forms

--- a/frontend/src/apps/DepressiLess/support_chat/text_input/TextClassification.css
+++ b/frontend/src/apps/DepressiLess/support_chat/text_input/TextClassification.css
@@ -47,6 +47,7 @@
     background-color: #DADADA; /* Adjust your color */
   }
 
+  /*
   .inputStyle {
     width: '90%';
     padding: '10px';
@@ -55,4 +56,4 @@
     outline: 'none';
     border-radius: '20px';
   }
-  
+  */
